--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-USER='postgres'
-HOST='localhost'
-DATABASE='clockwise_clockware'
-PASSWORD='D@t@b@s32003'
-PORT=5432
+DB_USER='postgres'
+DB_HOST='localhost'
+DB_DATABASE='clockwise_clockware'
+DB_PASSWORD='D@t@b@s32003'
+DB_PORT=5432
+PORT=3000
