--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "winston": "^3.5.1"
   }
 }
