fix: .env, pool.js feat: logger

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USER='postgres'
 DB_HOST='localhost'
-DB_DATABASE='clockwise_clockware'
+DB_NAME='clockwise_clockware'
 DB_PASSWORD='D@t@b@s32003'
 DB_PORT=5432
 PORT=3000
