--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.15.1",
     "winston": "^3.5.1"
+  },
+  "devDependencies": {
+    "nodemailer": "^6.7.2"
   }
 }
