--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^14.1.0",
-    "express": "^4.17.2",
+    "express": "4.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.15.1",
-    "winston": "^3.5.1"
-  },
-  "devDependencies": {
-    "nodemailer": "^6.7.2"
+    "winston": "^3.5.1",
+    "nodemailer": "6.7.2"
   }
 }
