--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "dotenv": "^14.1.0",
     "express": "4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "6.7.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.15.1",
-    "winston": "^3.5.1",
-    "nodemailer": "6.7.2"
+    "winston": "^3.5.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
