--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "node index.js",
     "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all",
+    "seed-all": "npx sequelize-cli db:seed:all",
     "drop-all": "node ./utils/dropTables.js",
-    "migrate-initial": "npm run migrate && npm run seed"
+    "migrate-initial": "npm run migrate && npm run seed-all"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,7 +23,8 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.15.1",
-    "winston": "^3.5.1"
+    "winston": "^3.5.1",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
