--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "dotenv": "^14.1.0",
     "express": "4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "nodemailer": "6.7.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.15.1",
-    "winston": "^3.5.1",
-    "moment": "^2.29.3"
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
