--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.ts",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "start": "node index.ts",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate-undo": "npx sequelize-cli db:migrate:undo",
     "seed-all": "npx sequelize-cli db:seed:all",
-    "drop-all": "node ./utils/dropTables.js",
+    "drop-all": "node src/utils/dropTables.ts",
     "migrate-initial": "npm run migrate && npm run seed-all"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cookie-session": "^2.0.0",
@@ -32,9 +35,14 @@
     "winston": "^3.5.1"
   },
   "devDependencies": {
-    "@types/node": "^18.7.18",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^16.11.59",
     "@types/validator": "^13.7.6",
     "sequelize-cli": "^6.4.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.8.3"
   }
 }
