--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clockwise_clockware_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "./dist",
   "license": "MIT",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -16,7 +16,6 @@
     "migrate-initial": "npm run migrate && npm run seed-all"
   },
   "dependencies": {
-    "@types/nodemailer": "6.4.6",
     "body-parser": "1.19.2",
     "cookie-session": "2.0.0",
     "dotenv": "14.3.2",
@@ -35,6 +34,7 @@
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
+    "@types/nodemailer": "6.4.6",
     "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
