--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "npm run serve",
     "serve": "node ./dist/index.js",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "start-develop": "npm run build-ts && npm run lint && npm run start",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate-undo": "npx sequelize-cli db:migrate:undo",
     "seed-all": "npx sequelize-cli db:seed:all",
